[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Stepan Kozlov <pewspoon.info@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.11.6"
prompt = "^0.4.1"



[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"